--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/webpack-env": "^1.15.2",
     "circular-dependency-plugin": "^5.2.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
     "minify-html-literals": "^1.3.5",
@@ -52,12 +53,12 @@
     "source-map": "^0.7.3",
     "source-map-explorer": "^2.5.2",
     "source-map-loader": "^0.2.4",
-    "terser-webpack-plugin": "^4.2.3",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.0",
-    "webpack": "^4.43.0",
+    "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
